correcting rtl alignment when modal reduced

--- a/administrator/templates/isis/less/template-rtl.less
+++ b/administrator/templates/isis/less/template-rtl.less
@@ -133,3 +133,6 @@ div#j-sidebar-container.j-toggle-visible #j-toggle-sidebar-button {
 		margin-right: 0;
 	}
 }
+.row-fluid .modal-batch [class*="span"] {
+	margin-right: 0;
+}
